# image_classification

./: pyproject.toml
image_classification/: create_train_test_split.py  dataloader.py  dataset.py
